--- a/view/paymentPopup_donghyun.ejs
+++ b/view/paymentPopup_donghyun.ejs
@@ -74,6 +74,14 @@
             </article>
         </section>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => { // 5초뒤 종료
+            setTimeout(()=>{
+                window.location.href = "/showPayment";
+            }, 5000);
+        });
+    </script>
 </body>
 
 </html>
