--- a/view/html/style.css
+++ b/view/html/style.css
@@ -21,7 +21,8 @@
   position: relative;
   width: 100%;
   height: 91%;
-  background: #3b3b3b;
+  background: linear-gradient(to top, #363d44, #252e32); 
+
 }
 
 /* ===하단바 영역=== */
@@ -31,8 +32,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #515151;
+  background-color: #24242C;
   padding: 0 5rem;
+  box-shadow: 0 -7px 7px rgba(67, 72, 71, 0.26);
+  position: relative;
+  z-index: 100;
 }
 
 .barButtonsArea {
@@ -47,17 +51,22 @@
   align-items: center;
   justify-content: center;
   font-size: 1.3rem;
-  background: e6e6e6;
-  color: #333;
+  background: #3f3f3f;
+  color: #1d1d25;
   padding: 0.5rem 1rem;
-  border-radius: 0.4rem;
-  border: 1px solid #d1d1d1;
+  border: 1px solid;
+  box-shadow: 0 2px 3px rgba(23, 23, 23, 0.412),
+              inset 0 0 5px 5px #444444;
+  
 }
 
 .barButtons:hover {
-  background: #f2f2f2;
-  color: #000;
-  box-shadow: 0 4px 8px rgba(22, 22, 22, 0.3);
+  background: #6F122D;
+  color: #77384b;
+  
+  box-shadow: 0 2px 3px rgba(63, 22, 22, 0.412),
+  inset 0 0 5px 5px #322222;
+
 }
 
 .bottomBarIcon {
@@ -68,10 +77,12 @@
   height: 3rem;
   margin-top: -1rem;
   margin-right: 16.5rem;
+  opacity: 0.6;
 }
 
 .clockArea {
   color: #E6E6E6;
+  opacity: 0.7;
 }
 
 .timeDisplay {
@@ -108,6 +119,7 @@
   background: url("images/completed_shape.png") no-repeat;
   background-size: contain;
 }
+
 /* 미완료단계 */
 .remainingStep {
   background: url("images/remaining_shape.png") no-repeat;
@@ -125,7 +137,7 @@
   height: 54rem;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 .popupBar {
@@ -134,14 +146,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #E6E6E6;
+  background-color: #1a2129;
+  color: #3a4a5c;
   padding: 2rem;
+  box-shadow: 0 10px 10px -5px rgba(0, 25, 24, 0.836);
 }
-.popupBarTextCommon{
+
+.popupBarTextCommon {
   font-size: 1.4rem;
 }
-.popupContent{
+
+.popupContent {
   width: 100%;
   height: 92%;
-  background-color: #ADADAD;
+  background: #0F2027;
+  background: linear-gradient(to bottom, #2c536437, #203a4385, #0f2027c8);
+  box-shadow: 
+  0 1px 1px rgba(0,0,0,0.08), 
+  0 2px 2px rgba(0,0,0,0.12), 
+  0 4px 4px rgba(0,0,0,0.16), 
+  0 8px 8px rgba(0,0,0,0.20);
 }
