나도 내가 뭐 했는지 까먹음

--- a/view/ticket_print_popup.ejs
+++ b/view/ticket_print_popup.ejs
@@ -66,7 +66,8 @@
                     <p class="printLabel">티켓 출력</p>
                     <div class="ticketImg"></div>
                     <section class="confirmButtonArea">
-                        <button class="confirmButtons">아니요</button><button class="confirmButtons">예</button>
+                        <button class="confirmButtons">아니요</button>
+                        <button id="printTicketBtn" class="confirmButtons">예</button>
                     </section>
                 </section>
             </section>
@@ -90,8 +91,16 @@
                     class="timeDisplay">12:00</span>
             </article>
         </section>
-
     </div>
+
+    <script>
+        const printTicketBtn = document.getElementById("printTicketBtn");
+
+        printTicketBtn.addEventListener( "click", () => {
+            window.print();
+            window.location.href = "/complete";
+        });
+    </script>
 </body>
 
 </html>
