--- a/view/mvtime01.ejs
+++ b/view/mvtime01.ejs
@@ -117,7 +117,7 @@
                                 <p class="mvTime">시간</p>
                             </div>
                             <ul class="allMvTime">
-                                <li class="mvTime">2024년 09월 10일 화요일<br>A관 09시00분~12시00분</li>
+                                <a href='/selectPeople?time=2024년 09월 10일 화요일'>test</a>
                                 <li class="mvTime">2024년 09월 10일 화요일<br>A관 09시00분~12시00분</li>
                                 <li class="mvTime">2024년 09월 10일 화요일<br>A관 09시00분~12시00분</li>
                                 <li class="mvTime">2024년 09월 10일 화요일<br>A관 09시00분~12시00분</li>
@@ -125,7 +125,6 @@
                                 <li class="mvTime">2024년 09월 10일 화요일<br>A관 09시00분~12시00분</li>
                                 <li class="mvTime">2024년 09월 10일 화요일<br>A관 09시00분~12시00분</li>
                             </ul>
-
                         </div>
 
                 </section>
@@ -145,6 +144,9 @@
         </section>
 
     </div>
+    <script>
+        document.getElementById("testLi").addEventListener("click",()=>{})
+    </script>
 </body>
 
 </html>
