--- a/view/selectPeople_jungim.ejs
+++ b/view/selectPeople_jungim.ejs
@@ -117,7 +117,7 @@
                         <div class="countPeople">7</div>
                         <div class="countPeople">8</div>
                     </div>
-                    <button class="selectPeopleBtn">확인</button>
+                    <button id="selectPeopleBtn" class="selectPeopleBtn">확인</button>
                 </section>
             </section>
         </section>
@@ -133,9 +133,26 @@
             <article class="clockArea"><i class="bottomBarIcon fa-regular fa-clock"></i><span
                     class="timeDisplay">12:00</span>
             </article>
+            <p>test: <%= time.time %></p>
         </section>
-
     </div>
+    <script>
+        const reservationMoiveData = {
+            time: "<%= time.time%>"
+        }
+
+        
+        console.log( reservationMoiveData );
+
+        document.getElementById("selectPeopleBtn").addEventListener(
+            "click",()=>{
+                //const url = `time={}`
+                //alert("test");
+                // seatSelection
+            }
+        );
+
+    </script>
 </body>
 
 </html>
