--- a/view/kiosk_ticket_purchase.ejs
+++ b/view/kiosk_ticket_purchase.ejs
@@ -57,11 +57,12 @@
       width: 48%;
       left: 50%;
       top: 50%;
-      transform: translate(-50%,-50%);
+      transform: translate(-50%, -50%);
       transition: 0.3s;
       border-radius: 1rem;
     }
-    .ticketBookingTouchArea{
+
+    .ticketBookingTouchArea {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -70,7 +71,8 @@
       top: 0;
       z-index: 100;
     }
-    .ticketBookingTouchArea:hover ~ .ticketBookingImg{
+
+    .ticketBookingTouchArea:hover~.ticketBookingImg {
       box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.3);
     }
 
@@ -91,7 +93,7 @@
     <section class="layoutArea">
       <!-- 키패드 영역 -->
       <section class="ticketBookingArea">
-        <div class="ticketBookingTouchArea"></div>
+        <div id="ticketBookingTouchArea" class="ticketBookingTouchArea"></div>
         <img class="ticketBookingImg" src="./images/on-site_booking.png" alt="현장예매이미지">
       </section>
       <section class="keypadArea">
@@ -128,6 +130,13 @@
     </section>
 
   </div>
+  <script>
+    const touchScreen = document.getElementById("ticketBookingTouchArea");
+    touchScreen.addEventListener("click", () => {
+      window.location.href = "/movie_selection";
+    })
+    console.log(touchScreen)
+  </script>
 </body>
 
 </html>
