--- a/view/select_headcount_popup.ejs
+++ b/view/select_headcount_popup.ejs
@@ -238,7 +238,7 @@
                 if(movieData.adult == 0 && movieData.youth == 0 && movieData.special == 0){
                     alert("인원을 선택해주세요!");
                 }else{
-                    console.log( "이동해야겠지?" );
+                    window.location.href = "/select_seat";
                 }
             }
         );
