--- a/view/kiosk_ticket_purchase.ejs
+++ b/view/kiosk_ticket_purchase.ejs
@@ -91,7 +91,7 @@
     <section class="layoutArea">
       <!-- 키패드 영역 -->
       <section class="ticketBookingArea">
-        <div class="ticketBookingTouchArea"></div>
+        <div id="ticketBookingTouchArea" class="ticketBookingTouchArea"></div>
         <img class="ticketBookingImg" src="./images/on-site_booking.png" alt="현장예매이미지">
       </section>
       <section class="keypadArea">
@@ -128,6 +128,13 @@
     </section>
 
   </div>
+  <script>
+    const ticketBookingTouchArea = document.getElementById("ticketBookingTouchArea");
+
+    ticketBookingTouchArea.addEventListener( "click", () => {
+      window.location.href = "/movie_selection";
+    } );
+  </script>
 </body>
 
 </html>
