--- a/view/html/payment_card_input_popup.html
+++ b/view/html/payment_card_input_popup.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>paymentPopup</title>
+    <title>kiosk_card_input_guide_popup</title>
     <style>
         .popupContent {
             display: flex;
@@ -25,13 +25,27 @@
             font-size: 2.4rem;
             width: 100%;
             text-align: center;
-            margin: 2rem 0 3rem 0
+            margin: 2rem 0 3rem 0;
+            color: white;
         }
 
         .popupContentImg {
-            width: 40rem;
-            height: 25rem;
-            background-color: white;
+            width: 50rem;
+            height: 30rem;
+            margin-left: 2rem;
+            background-image: url("images/card_input.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+            transform: scale(1.15); border: 1px solid red;
+        }
+
+        .showTimerArea {
+            height: 3rem;
+            width: 100%;
+        }
+        .showTimer {
+            color: white; font-size: 1.6rem;
+            text-align: center;
         }
     </style>
 </head>
@@ -43,9 +57,9 @@
         <section class="layoutArea">
             <!-- ===사이드바 영역=== -->
             <section class="progressSidebar">
-                <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings completedStep"><span class="stepLabel">영화<br>선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">시간<br>선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">좌석<br>선택</span></div>
                 <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
             <!-- ===팝업 영역=== -->
@@ -56,8 +70,11 @@
                 </article>
                 <section class="popupContent">
                     <!-- ~여기에 작성~ -->
-                    <p class="popupContentText">카드입력</p>
-                    <img class="popupContentImg">
+                    <p class="popupContentText">카드 입력</p>
+                    <div class="popupContentImg"></div>
+                    <section class="showTimerArea">
+                    <div class="showTimer">시간이 나올거에융</div>
+                </section>
                 </section>
             </section>
         </section>
