--- a/view/html/payment_point_accumulation_popup.html
+++ b/view/html/payment_point_accumulation_popup.html
@@ -20,6 +20,7 @@
             text-align: center;
             font-size: 2.4rem;
             margin-bottom: 3.5rem;
+            color: #ffffff;
         }
 
         /* 키패드 영역 */
