--- a/view/html/seat_selectionD.html
+++ b/view/html/seat_selectionD.html
@@ -12,19 +12,18 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>Seat_Selection</title>
+    <title>sideBar</title>
     <style>
 
         .layoutArea{
             display: flex;
-            justify-content: space-between;
             align-items: center;
             flex-direction: column;
         }
         .sectionTop {
-            margin-top: 5rem;
+            margin-top: 8rem;
             width: 100%;
-            height: 20%;
+            height: 8rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -32,46 +31,45 @@
         }
 
         .ticketCountArea {
-            width: 80rem;
-            height: 10rem;
-            background-color: #D9D9D9;
-            font-size: 3.2rem;
-            line-height: 10rem;
+            width: 60rem;
+            height: 5.5rem;
+            color: white;
+            font-size: 2.4rem;
+            line-height: 5.5rem;
             text-align: center;
-            border: 3px solid black;
-            border-radius: 10px;
             margin: 0 2rem 0 2rem;
         }
 
         .ticketCountArea span {
-            font-size: 3.2rem;
+            font-size: 2.4rem;
             margin: 0 0.5rem 0 0.5rem;
         }
 
         .ticketCountArea button {
-            font-size: 3.2rem;
+            font-size: 2.4rem;
             margin: 0 0.5rem 0 0.5rem;
-            width: 5rem;
-            height: 5rem;
+            width: 4rem;
+            height: 4rem;
         }
 
         .sectionMiddle {
-            margin-top:5rem;
-            width: 100%;
-            height: 10%;
+            width: 60rem;
+            height: 10rem;
             display: flex;
             align-items: center;
             justify-content: center;
             /* background-color:floralwhite; */
+
         }
 
         .screen {
             width: 60rem;
-            height: 5rem;
-            line-height: 5rem;
-            font-size: 3.2rem;
+            height: 3rem;
+            line-height: 3rem;
+            font-size: 1.8rem;
             background-color: #939393;
             text-align: center;
+            letter-spacing: .5rem;
         }
 
         .sectionBottom {
@@ -83,7 +81,7 @@
 
         .seatsArea {
             display: grid;
-            grid-template-columns: repeat(10, 1fr);
+            grid-template-columns: repeat(12, 1fr);
             /* 좌석 8개 한 줄 */
             justify-items: center;
             /* 좌석들 각자의 중앙 정렬 */
@@ -138,11 +136,11 @@
 
         .chosenBtn{
             position: absolute;
-            left :85%;
-            bottom: 10%;
-            width: 10rem;
-            height: 5rem;
-            font-size: 2rem;
+            left : 90%;
+            bottom: 4%;
+            width: 8rem;
+            height: 4.5rem;
+            font-size: 1.6rem;
         }
     </style>
 </head>
@@ -153,6 +151,7 @@
         <!-- ===레이아웃 영역=== -->
         <section class="layoutArea">
 
+            <!-- ~여기에 작성~ -->
             <section class="sectionTop">
                 <div class="ticketCountArea">
                     <button>+</button>성인<span>0</span><button>-</button>
@@ -163,172 +162,177 @@
             </section>
 
             <section class="sectionMiddle">
-                <p class="screen">스크린</p>
+                <p class="screen">screen</p>
             </section>
 
             <section class="sectionBottom">
                 <div class="seatsArea">
-                    <empty></empty>
-                    <input type="checkbox"  class="seat-checkbox">
+                    
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">A1</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">A2</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">A3</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">A4</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">A5</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">A6</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">A7</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat8">A8</label>
-                    <empty></empty>
+                    
 
                 </div>
                 <div class="seatsArea">
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">1</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
+                    
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat8">8</label>
 
                 </div>
                 <div class="seatsArea">
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">1</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
+                    
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat8">8</label>
 
                 </div>
                 <div class="seatsArea">
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">1</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
+                    
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat8">8</label>
 
                 </div>
                 <div class="seatsArea">
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat1">1</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat2">2</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat3">3</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat4">4</label>
-                    <empty></empty>
-                    <empty></empty>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat5">5</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat6">6</label>
-
-                    <input type="checkbox"  class="seat-checkbox">
+                    <empty></empty>
+                    <empty></empty>
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat7">7</label>
 
-                    <input type="checkbox"  class="seat-checkbox">
+                    <input type="checkbox" class="seat-checkbox">
                     <label for="seat8">8</label>
 
                 </div>
                 <button class="chosenBtn">선택완료</button>
-                
-                <!-- ===사이드바 영역=== -->
-                <section class="progressSidebar">
-                    <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                    <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
-                    <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
-                    <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
-                </section>
             </section>
-            <!-- ===하단바 영역=== -->
-            <section class="bottomBar">
-                <article class="barButtonsArea">
-                    <button class="barButtons staffCallButton">직원호출</button>
-                    <button class="barButtons"><i class="bottomBarIcon fa-solid fa-house"></i></button>
-                    <button class="barButtons"><i class="bottomBarIcon fa-solid fa-backward"></i></button>
-                </article>
-                <img class="logoImg" src="images/logo.png" alt="로고이미지">
-                <article class="clockArea"><i class="bottomBarIcon fa-regular fa-clock"></i><span
-                        class="timeDisplay">12:00</span>
-                </article>
+            <!-- ===사이드바 영역=== -->
+            <section class="progressSidebar">
+                <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
+        </section>
+        <!-- ===하단바 영역=== -->
+        <section class="bottomBar">
+            <article class="barButtonsArea">
+                <button class="barButtons staffCallButton">직원호출</button>
+                <button class="barButtons"><i class="bottomBarIcon fa-solid fa-house"></i></button>
+                <button class="barButtons"><i class="bottomBarIcon fa-solid fa-backward"></i></button>
+            </article>
+            <img class="logoImg" src="images/logo.png" alt="로고이미지">
+            <article class="clockArea"><i class="bottomBarIcon fa-regular fa-clock"></i><span
+                    class="timeDisplay">12:00</span>
+            </article>
+        </section>
 
     </div>
 </body>
