--- a/view/html/ticket_print_popup.html
+++ b/view/html/ticket_print_popup.html
@@ -12,57 +12,43 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>user_verification_keypad</title>
+    <title>ticket print popup</title>
     <style>
-        .keypadArea {
-            width: 30rem;
-            height: 25rem;
+        .popupContent {
             text-align: center;
+            padding-top: 4rem;
         }
 
-        i {
-            pointer-events: none;
+        .printLabel {
+            font-size: 2.4rem;
+            padding-bottom: 2.5rem;
+            color: #FFFFFF;
+        }
+
+        .ticketImg {
+            width: 25rem;
+            height: 30rem;
+            margin:auto ;
+            margin-top: 0.5rem;
+            background-color: #444444;
+            margin-bottom: 4rem;
+            color: white;
             font-size: 1.5rem;
         }
 
-        .key {
-            width: 9rem;
-            height: 4.5rem;
-            margin: 0.4rem;
-            font-size: 1.8rem;
-            background-color: #444444;
-            color: #EDEDED;
+        .confirmButtonArea {
+            display: flex;
+            justify-content: center;
+            gap: 4rem;
         }
 
-        .check {
-            width: 96%;
-            height: 4.5rem;
-            font-size: 1.8rem;
-            background-color: #EDEDED;
-        }
-
-        .popupContent {
-            padding-top: 6rem;
-        }
-
-        .keypadArea {
-            width: 35rem;
-            padding: 2rem;
-            height: 37.5rem;
-            background-color: #D9D9D9;
-            align-content: center;
-            margin: auto;
-            padding-left: 2.5rem;
-        }
-
-        .phoneNumberInput {
-            width: 96%;
-            height: 4.5rem;
-            font-size: 1.8rem;
-            background-color: #EDEDED;
+        .confirmButtons {
+            width: 7rem;
+            height: 3.5rem;
+            font-size: 1.6rem;
+            margin-top: -1rem;
         }
     </style>
-
 </head>
 
 <body>
@@ -73,28 +59,25 @@
             <!-- ===팝업 영역=== -->
             <section class="popupArea">
                 <article class="popupBar">
-                    <p class="popupTitle popupBarTextCommon">포인트 유저 확인</p>
+                    <p class="popupTitle popupBarTextCommon">티켓 출력</p>
                     <i class="popupBarTextCommon fa-solid fa-x"></i>
                 </article>
                 <section class="popupContent">
-                    <!-- 키패드 영역 -->
-                    <section class="keypadArea">
-                        <input type="number" class="phoneNumberInput">
-                        <button class="key">1</button>
-                        <button class="key">2</button>
-                        <button class="key">3</button>
-                        <button class="key">4</button>
-                        <button class="key">5</button>
-                        <button class="key">6</button>
-                        <button class="key">7</button>
-                        <button class="key">8</button>
-                        <button class="key">9</button>
-                        <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
-                        <button class="key">0</button>
-                        <button class="key">재입력</button>
-                        <button class="check">확인</button>
+                    <p class="printLabel">티켓 출력</p>
+                    <div class="ticketImg">
+                         영화 입장권
+                    </div>
+                    <section class="confirmButtonArea">
+                        <button class="confirmButtons" onclick="print()">프린트</button>
                     </section>
                 </section>
+            </section>
+            <!-- ===사이드바 영역=== -->
+            <section class="progressSidebar">
+                <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
+                <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
         </section>
         <!-- ===하단바 영역=== -->
