--- a/view/html/user_verification_popup.html
+++ b/view/html/user_verification_popup.html
@@ -12,39 +12,53 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>ticket print popup</title>
+    <title>user_verification_keypad</title>
     <style>
-        .popupContent {
-            text-align: center;
-            padding-top: 4rem;
+
+        i {
+            pointer-events: none;
+            font-size: 1.5rem;
         }
 
-        .printLabel {
-            font-size: 2.4rem;
-            padding-bottom: 2.5rem;
-        }
-
-        .ticketImg {
-            width: 40rem;
-            height: 25rem;
-            margin-left: 22.5rem;
-            margin-top: 15px;
+        .key {
+            width: 9rem;
+            height: 4.5rem;
+            margin: 0.4rem;
+            font-size: 1.8rem;
             background-color: #444444;
-            margin-bottom: 4rem;
+            color: #EDEDED;
         }
 
-        .confirmButtonArea {
-            display: flex;
-            justify-content: center;
-            gap: 4rem;
+        .check {
+            width: 96%;
+            height: 4.5rem;
+            font-size: 1.8rem;
+            background-color: #EDEDED;
         }
 
-        .confirmButtons {
-            width: 8rem;
-            height: 3.5rem;
-            font-size: 1.6rem;
+        .popupContent {
+            padding-top: 6rem;
+        }
+
+        .keypadArea {
+            width: 35rem;
+            padding: 2rem;
+            height: 37.5rem;
+            background-color: #D9D9D9;
+            align-content: center;
+            margin: auto;
+            padding-left: 2.5rem;
+            text-align: center;
+        }
+
+        .phoneNumberInput {
+            width: 96%;
+            height: 4.5rem;
+            font-size: 1.8rem;
+            background-color: #EDEDED;
         }
     </style>
+
 </head>
 
 <body>
@@ -55,23 +69,28 @@
             <!-- ===팝업 영역=== -->
             <section class="popupArea">
                 <article class="popupBar">
-                    <p class="popupTitle popupBarTextCommon">티켓 출력</p>
+                    <p class="popupTitle popupBarTextCommon">포인트 유저 확인</p>
                     <i class="popupBarTextCommon fa-solid fa-x"></i>
                 </article>
                 <section class="popupContent">
-                    <p class="printLabel">티켓 출력</p>
-                    <div class="ticketImg"></div>
-                    <section class="confirmButtonArea">
-                        <button class="confirmButtons">아니요</button><button class="confirmButtons">예</button>
+                    <!-- 키패드 영역 -->
+                    <section class="keypadArea">
+                        <input type="number" class="phoneNumberInput">
+                        <button class="key">1</button>
+                        <button class="key">2</button>
+                        <button class="key">3</button>
+                        <button class="key">4</button>
+                        <button class="key">5</button>
+                        <button class="key">6</button>
+                        <button class="key">7</button>
+                        <button class="key">8</button>
+                        <button class="key">9</button>
+                        <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
+                        <button class="key">0</button>
+                        <button class="key">재입력</button>
+                        <button class="check">확인</button>
                     </section>
                 </section>
-            </section>
-            <!-- ===사이드바 영역=== -->
-            <section class="progressSidebar">
-                <div class="progressSettings completedStep"><span class="stepLabel">영화 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">시간 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">좌석 선택</span></div>
-                <div class="progressSettings remainingStep"><span class="stepLabel">결제</span></div>
             </section>
         </section>
         <!-- ===하단바 영역=== -->
