File name match update

--- a/view/html/movie_time_selection.html
+++ b/view/html/movie_time_selection.html
@@ -11,7 +11,7 @@
   <!-- icon -->
   <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
   <!-- css -->
-  <title>Movie Time Selection</title>
+  <title>movie_time_selection</title>
   <link rel="stylesheet" href="style.css">
   <style>
     /* ##영화-시간 토글## */
