--- a/view/html/payment.html
+++ b/view/html/payment.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>Payment_Points</title>
+    <title>payment</title>
     <style>
         /* #결제/포인트사용# */
         .paymentContainer {
