--- a/view/html/payment_summary_popup.html
+++ b/view/html/payment_summary_popup.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>kiosk_payment_summary_popup</title>
+    <title>payment_summary_popup</title>
     <style>
         .completePaymentPopup {
             display: flex;
