--- a/view/html/seat_selectionC.html
+++ b/view/html/seat_selectionC.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>sideBar</title>
+    <title>seat_selectionC</title>
     <style>
 
         .layoutArea{
