--- a/view/html/select_headcount_popup.html
+++ b/view/html/select_headcount_popup.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>Select_People_Popup</title>
+    <title>select_headcount_popup</title>
     <style>
         /* 숫자 카운트 박스 공통된 부분  */
         .selectPeople {
