--- a/view/html/select_movie_time_popup.html
+++ b/view/html/select_movie_time_popup.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 
 
-    <title>Movie-Info_Popup</title>
+    <title>select_movie_time_popup</title>
 
     <style>
         /* 시간선택팝업 */
