--- a/view/html/ticket_print_popup.html
+++ b/view/html/ticket_print_popup.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>ticket print popup</title>
+    <title>ticket_print_popup</title>
     <style>
         .popupContent {
             text-align: center;
