--- a/view/html/complete.html
+++ b/view/html/complete.html
@@ -13,7 +13,7 @@
     <!-- 외부 CSS 파일 링크 -->
     <link rel="stylesheet" href="style.css">
 
-    <title>payment_complete</title>
+    <title>complete</title>
     <style>
          .popupContent {
             display: flex;
