--- a/view/html/home.html
+++ b/view/html/home.html
@@ -13,7 +13,7 @@
   <!-- css -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="keypad.css">
-  <title>kiosk_ticket_purchase</title>
+  <title>home</title>
   <style>
     .layoutArea {
       display: flex;
