--- a/view/html/invalid_booking_popup.html
+++ b/view/html/invalid_booking_popup.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
   <!-- css -->
   <link rel="stylesheet" href="style.css" />
-  <title>Invalid_Booking_Popup</title>
+  <title>invalid_booking_popup</title>
   <style>
     .popupContent {
             display: flex;
