--- a/view/html/ticket_print.html
+++ b/view/html/ticket_print.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>Ticket_Print</title>
+    <title>ticket_print</title>
     <style>
         /* main영역 */
         .mainArea {
