--- a/view/html/user_verification_popup.html
+++ b/view/html/user_verification_popup.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>user_verification_keypad</title>
+    <title>user_verification_popup</title>
     <style>
 
         i {
